tests/NormalTests/paczka2/big_fuzzy/51775112.err
Error in line 3: S546 S247 35,6
Error in line 5: ksjuc A432 85,1
Error in line 16: hl9FWdjhPH A432 7,5
Error in line 9: ksjuc S546 57,9
Error in line 20: FgJG S548 5,1
Error in line 45: 8OiiYiKW A432 211,8
Error in line 56: S546 S548 87,8
Error in line 80: MJGSFzt5 S5{8 56,1
Error in line 79: hl9FWdjhPH A432 2,3
Error in line 81: liSXxvupJi S546 78,3
Error in line 85: liSXxvupJi A432 19,1
Error in line 91: MJGSFzt5 S546 8,13
Error in line 73: MJGSFzt5 S548 42,2
Error in line 93: ksjuc S247 89,8
Error in line 96: ksjuc A432 14,6
Error in line 94: MJGSFzt5 S546 23,4
Error in line 97: ksjuc S247 24,9
Error in line 98: MJGSFzt5 S247 32,6
Error in line 104: 8OiiYiKW S247 52,6
Error in line 113: FgJG S247 39,9
Error in line 115: 8OiiYiKW S548 98,4
Error in line 123: 8OiiYiKW A432 31,9
Error in line 124: liSXxvupJi S548 67,5
Error in line 131: 8OiiYiKW S247 -3,6
Error in line 126: 8OiiYiKW S247 40,3
Error in line 141: ksjuc S247 57,40
Error in line 138: MJGSFzt5 S247 30,1
Error in line 144: ksjuc S247 73,0
Error in line 142: MJGSFzt5 A432 43,1
Error in line 151: MJGSFzt5 S247 5,2
Error in line 156: FgJG S546 10,7
Error in line 188: ksjuc S546 41,8
Error in line 201: FgJG A432 54,2
Error in line 216: FgJG S548 45,6
Error in line 222: hl9FWdjhPH S247 94,7
Error in line 243: hl9FWdjhPH A432 60,5
Error in line 234: liSXxvupJi A432 64,4
Error in line 244: hl9FWdjhPH S247 676,9
